# LoLLogs

./: .gitignore  LoLLogs.hs  TODO
champions/: champion-thumbnail-sprite-template.xcf  upload-champs.sh
client/: .gitignore  ImportIntoMongo.hs  Main.glade  Main.hs  MakeJSONFiles.hs  ParseLog.hs  UploadGames-linux.hs  UploadGames-win32.hs  UploadGamesCommon.hs  UploadGamesGTK.hs  UploadGamesWX.hs  lollogs-client.cabal
client/CAClient/: .gitignore  CAClient.sln
client/CAClient/CA Client Installer/: CA Client Installer.vdproj
client/CAClient/CAClient/: CAClient.csproj  CAClient_TemporaryKey.pfx  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  Program.cs  UploadWorker.cs
client/CAClient/CAClient/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
client/CAClient/CAClientCommon/: CAClientCommon.csproj  DirFinder.cs  HsParse.cs  Parser.cs  ParserCombinators.cs  UILogger.cs
client/CAClient/CAClientCommon/Properties/: Resources.Designer.cs  Resources.resx
fixtures/: champions.mongo.js  fix-summoner-names.mongo.js  item-thumbnail-sprite.xcf  items.mongo.js  spell-thumbnail-sprite.xcf  spells.mongo.js
images/: CA Logo.xcf
paper/: Makefile  makepaper.sh  paper.bib  paper.tex
parser/: .gitignore  ParseLog.hs  Parser.def  Parser.hs  StartEnd.c  buildDLL.sh  lollogs.cabal  migration-0.2.js
parser/Data/: ASObject.hs
parser/Data/ASObject/: Parse.hs
parser/Data/GameLog/: Aeson.hs  Persist.hs  PersistTH.hs  Types.hs
presentation/: haskell-web-analytics.html  makepresentation.sh  presentation.md
samples/: games.data.json  log-sample.json  log-sample.pretty.json
src/: ImportIntoMongo.hs  Json.hs  LoLStats.hs  Main.hs  ParseImports.hs  ParseLog.hs  UploadGames-win32.hs  UploadGames.hs  Value.hs  lollogs.cabal
src/Data/: GameLog.hs
src/Data/ASObject/: Json.hs  Parse.hs  Types.hs
src/Data/GameLog/: Aeson.hs  MongoDB.hs  Persist.hs  PersistTH.hs  Types.hs
src/Database/MongoDB/: GameLogs.hs
src/Game/: Log.hs
src/Game/Log/: Persist.hs
yesod/LoLLogsWebApp/: Application.hs  Foundation.hs  Import.hs  LICENSE  LoLLogsWebApp.cabal  Model.hs  Settings.hs  devel.hs  main.hs
yesod/LoLLogsWebApp/Database/MongoDB/: MapReduceHelper.hs
yesod/LoLLogsWebApp/Handler/: Champion.hs  Chart.hs  ChartExample.hs  Game.hs  Root.hs  Summoner.hs
yesod/LoLLogsWebApp/Model/: Champion.hs  Game.hs  Item.hs  Spell.hs
yesod/LoLLogsWebApp/Model/Game/: Query.hs
yesod/LoLLogsWebApp/Model/Helper/: MapReduce.hs
yesod/LoLLogsWebApp/Settings/: StaticFiles.hs
yesod/LoLLogsWebApp/Widget/: GameList.hs
yesod/LoLLogsWebApp/Yesod/Widget/: AjaxFrame.hs  Flot.hs  GoogleAnalytics.hs  Pager.hs
yesod/LoLLogsWebApp/config/: client_session_key.aes  models  mongoDB.yml  routes  settings.yml
yesod/LoLLogsWebApp/deploy/: Procfile
yesod/LoLLogsWebApp/static/css/: champion-thumbnail-sprite.css  item-thumbnail-sprite.css  spell-thumbnail-sprite.css
yesod/LoLLogsWebApp/static/sprites/: champion-thumbnails.css  champions.css  items.css  spells.css
yesod/LoLLogsWebApp/static/tmp/: zfWtkHUp.css
yesod/LoLLogsWebApp/templates/: default-layout-wrapper.hamlet  default-layout.lucius  download.hamlet  game-index.hamlet  game-len.hamlet  game-view.hamlet  game-view.lucius  homepage.hamlet  homepage.lucius
yesod/LoLLogsWebApp/templates/champion/: create.hamlet  index.hamlet  index.lucius  update.hamlet  view.hamlet
yesod/LoLLogsWebApp/templates/game/: champion-portrait.hamlet  champions.hamlet  champions.lucius  index.hamlet  index.lucius  list.hamlet  list.julius  list.lucius  player-details.hamlet  view.hamlet  view.julius  view.lucius
yesod/LoLLogsWebApp/templates/summoner/: query-form.hamlet  stats.hamlet  stats.julius  stats.lucius  view.hamlet  view.julius  view.lucius
