Name:               lollogs-client
Version:            0.1
Synopsis:           League of Legends Log Parsing
Description:        LoL Log parsing.
License:            GPL
License-file:       LICENSE
Author:             Drew Haven
Maintainer:         Drew Haven <drew.haven@gmail.com>
Build-depends:      base >= 4,
		    lollogs,
                    mtl,
                    aeson >= 0.4,
                    attoparsec,
                    containers,
                    unordered-containers,
                    bytestring,
                    Win32,
                    filepath,
                    directory,
                    transformers,
                    time,
                    network,
                    HTTP

Build-type:         Simple

Executable:         upload-games
Main-is:            UploadGames-win32.hs
