Name:               lollogs
Version:            0.3.2
Synopsis:           League of Legends Log Parsing
Description:        LoL Log parsing.
License:            GPL
License-file:       LICENSE
Author:             Drew Haven
Maintainer:         Drew Haven <drew.haven@gmail.com>
Build-depends:      base                    >= 4.0 && < 5.0,
                    mtl                     >= 2.0 && < 3.0,
                    aeson                   >= 0.6 && < 0.7,
                    attoparsec              >= 0.10 && < 0.11,
                    persistent              >= 0.8 && < 1.0,
                    persistent-template     >= 0.8 && < 1.0,
                    containers,
                    unordered-containers,
                    template-haskell,
                    text,
                    bytestring,
                    vector

Build-type:         Simple

Exposed-modules:    Data.ASObject,
                    Data.GameLog,
                    Data.GameLog.Persist
Other-modules:      Data.GameLog.Types,
                    Data.GameLog.Aeson,
                    Data.GameLog.PersistTH,
                    Data.ASObject.Types,
                    Data.ASObject.Parse,
                    Data.ASObject.Json
