name:              LoLLogsWebApp
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Andrew Haven
maintainer:        Andrew Haven
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://LoLLogsWebApp.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Model.Helper.MapReduce
                     Model.Game
                     Model.Game.Query
                     Model.Champion
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Game
                     Handler.Champion
                     Handler.Chart
                     Handler.ChartExample
                     Handler.Summoner
                     Yesod.Widget.AjaxFrame
                     Yesod.Widget.Pager

    ghc-options:   -Wall -threaded -O0

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving

executable         LoLLogsWebApp
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded -O0

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 0.9        && < 0.10
                 , yesod-core                    >= 0.9.3      && < 0.10
                 , yesod-auth                    >= 0.7.3      && < 0.8
                 , yesod-static                  >= 0.3.1      && < 0.4
                 , yesod-default                 >= 0.4        && < 0.5
                 , yesod-form                    >= 0.3.3      && < 0.4
                 , mime-mail                     >= 0.3.0.3    && < 0.4
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.6.2      && < 0.7
                 , persistent-mongoDB            >= 0.6        && < 0.7
                 , template-haskell
                 , hamlet                        >= 0.10.5     && < 0.11
                 , shakespeare-css               >= 0.10       && < 0.11
                 , shakespeare-js                >= 0.10       && < 0.11
                 , shakespeare-text              >= 0.10       && < 0.11
                 , hjsmin                        >= 0.0.14     && < 0.1
                 , lollogs                      
                 , time                          >= 1.2        && < 2.0
                 , old-locale                    >= 1.0        && < 1.1
                 , containers                    >= 0.4        && < 0.5
                 , aeson                         >= 0.4        && < 0.5
                 , attoparsec                    >= 0.10       && < 0.11
                 , enumerator                    >= 0.4        && < 0.5
                 , bson                          >= 0.1.6      && < 0.2
                 , mongoDB                       >= 1.1.1      && < 1.2
