name:              LoLLogsWebApp
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Andrew Haven
maintainer:        Andrew Haven
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://LoLLogsWebApp.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False


    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Model.Helper.MapReduce
                     Model.Game
                     Model.Game.Query
                     Model.Champion
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Game
                     Handler.Champion
                     Handler.ChartExample
                     Handler.Summoner
                     Yesod.Widget.AjaxFrame
                     Yesod.Widget.Flot
                     Yesod.Widget.GoogleAnalytics
                     Yesod.Widget.Pager

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving

executable         LoLLogsWebApp
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 0.9.4      && < 0.10
                 , yesod-core                    >= 0.9.4      && < 0.10
                 , yesod-auth                    >= 0.7.3      && < 0.8
                 , yesod-static                  >= 0.3.2.1    && < 0.4
                 , yesod-default                 >= 0.5        && < 0.6
                 , yesod-form                    >= 0.3.4      && < 0.4
                 , mime-mail                     >= 0.3.0.3    && < 0.4
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.6.2      && < 0.7
                 , persistent-mongoDB            >= 0.6        && < 0.7
                 , template-haskell
                 , hamlet                        >= 0.10.5     && < 0.11
                 , shakespeare-css               >= 0.10       && < 0.11
                 , shakespeare-js                >= 0.10       && < 0.11
                 , shakespeare-text              >= 0.10       && < 0.11
                 , hjsmin                        >= 0.0.14     && < 0.1
                 , lollogs                       >= 0.2        && < 0.3
                 , time                          >= 1.2        && < 2.0
                 , old-locale                    >= 1.0        && < 1.1
                 , containers                    >= 0.4        && < 0.5
                 , aeson                         >= 0.4        && < 0.5
                 , attoparsec                    >= 0.10       && < 0.11
                 , enumerator                    >= 0.4        && < 0.5
                 , bson                          >= 0.1.6      && < 0.2
                 , mongoDB                       >= 1.1.1      && < 1.2
                 , wai-extra                     >= 0.4.6      && < 0.5
