name:              LoLLogsWebApp
version:           0.2.0
license:           BSD3
license-file:      LICENSE
author:            Andrew Haven
maintainer:        Andrew Haven
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://LoLLogsWebApp.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False


    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Model.Helper.MapReduce
                     Model.Champion
                     Model.Game
                     Model.Game.Query
                     Model.Item
                     Model.Spell
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Game
                     Handler.Champion
                     --Handler.ChartExample
                     Handler.Summoner
                     Widget.GameList
                     Yesod.Widget.AjaxFrame
                     Yesod.Widget.Flot
                     Yesod.Widget.GoogleAnalytics
                     Yesod.Widget.Pager

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving

executable         LoLLogsWebApp
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.0        && < 1.1
                 , yesod-core                    >= 1.0        && < 1.1
                 , yesod-auth                    >= 1.0        && < 1.1
                 , yesod-static                  >= 1.0        && < 1.1
                 , yesod-default                 >= 1.0        && < 1.1
                 , yesod-form                    >= 1.0        && < 1.1
                 , yesod-test                    >= 0.2        && < 0.3
                 , clientsession                 >= 0.7.4      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.9        && < 0.10
                 , persistent-mongoDB            >= 0.9        && < 0.10
                 , template-haskell
                 , hamlet                        >= 1.0        && < 1.1
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.0.14     && < 0.1
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.2        && < 1.3
                 , yaml                          >= 0.7        && < 0.8
                 , http-conduit                  >= 1.4        && < 1.5
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.2        && < 1.3

                 -- Other non-yesod packages
                 , lollogs                       >= 0.3        && < 0.4
                 , time                          >= 1.2        && < 2.0
                 , old-locale                    >= 1.0        && < 1.1
                 , containers                    >= 0.4        && < 0.5
                 , aeson                         >= 0.6        && < 0.7
                 , attoparsec                    >= 0.10       && < 0.11
                 , bson                          >= 0.1.6      && < 0.2
                 , mongoDB                       >= 1.2        && < 1.3
                 , skein                         >= 0.1.0.4

                 -- Old explicit package list.
                 --, yesod                         >= 0.10.2     && < 0.11
                 --, yesod-core                    >= 0.10.2     && < 0.11
                 --, yesod-auth                    >= 0.8.1      && < 0.9
                 --, yesod-static                  >= 0.10.1     && < 0.11
                 --, yesod-default                 >= 0.6        && < 0.7
                 --, yesod-form                    >= 0.4.2      && < 0.5
                 --, mime-mail                     >= 0.3.0.3    && < 0.4
                 --, clientsession                 >= 0.7.3      && < 0.8
                 --, bytestring                    >= 0.9        && < 0.10
                 --, text                          >= 0.11.1.13  && < 0.12
                 --, persistent                    >= 0.9 && < 0.10
                 --, persistent-template           >= 0.9 && < 0.10
                 --, persistent-mongoDB            >= 0.9        && < 0.10
                 --, template-haskell
                 --, hamlet                        >= 0.10       && < 0.11
                 --, shakespeare-css               >= 0.10       && < 0.11
                 --, shakespeare-js                >= 0.11       && < 0.12
                 --, shakespeare-text              >= 0.11       && < 0.12
                 --, hjsmin                        >= 0.0.14     && < 0.1
                 --, time                          >= 1.2        && < 2.0
                 --, old-locale                    >= 1.0        && < 1.1
                 --, containers                    >= 0.4        && < 0.5
                 --, aeson                         >= 0.6        && < 0.7
                 --, attoparsec                    >= 0.10       && < 0.11
                 --, enumerator                    >= 0.4        && < 0.5
                 --, bson                          >= 0.1.6      && < 0.2
                 --, mongoDB                       >= 1.2        && < 1.3
